2003-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/stem.cc (get_default_stem_end_position): lengthen stems for
	tremoloed stems.

	* lily/stem-tremolo.cc (brew_molecule): position tremolo next to
	head for flagged stems.

	* lily/stem.cc (get_default_stem_end_position): futz with extra
	stem length if there is a stem tremolo.

	* lily/tuplet-bracket.cc (brew_molecule): don't print bracket when
	it would be too small.

	* lily/font-metric.cc: return #f for non-existent glyph.

	* VERSION (MY_PATCH_LEVEL): read VERSION; version number is now
	exported through config.make.

	* input/regression/clef-oct.ly: new file.

	* scm/clef.scm (make-clef-set): use regexps, support arbitrary
	transposition.

	* input/template/*.ly: remove old relative.

	* ly/english.ly: add X names for double sharp.

2003-09-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/font-select.cc: new file handle font selection routines.

	* lily/parser.yy: add ; (Patrick Atamaniuk)

	* input/test/time-signature-double.ly: use markups for double time
	sigs.

	* scm/chord-name.scm: remove new-chord-name-brew-molecule ; use
	ChordNames.SeparationItem #'padding for adjusting space after chords.
	
	* lily/music-output-def.cc (LY_DEFINE): 
	new function ly:paper-lookup.
	
	* mf/parmesan-clefs.mf: use # quantities for char_box
	offsets. Fixes overflow errors in the PFA. 

	* scm/new-markup.scm (strut-markup): change calling interface for
	markup. Pass paper-def, not grob. This would allow \markup to be
	used separately from grobs.

	* lily/paper-def.cc: new function ly:paper-font; this function
	replaces ly:get-font.

	* lily/include/font-interface.hh (struct Font_interface): take
	Paper_def iso. Grob for get_font().

2003-09-14  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/ tutorial.itely, refman.itely: add warning
	about \key and accidentals.

2003-09-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (musicglyph-markup): undefine font-name.
