@@ -99,17 +99,19 @@ else:
 
 # the menu in lilypond-mode.el
 for line in [
-'-/( - _ -/) -',
-'-/[ - _ -/] -',
-'-///( - _ -///) -',
+'/( - _ /) -',
+'/[ - _ /] -',
+'< - _ > -',
+'<< - _ >> -',
+'///( - _ ///) -',
 '///[ - _ ///] -',
-'-///< - _ -///! -',
-'-///> - _ -///! -',
+'///< - _ ///! -',
+'///> - _ ///! -',
 '//center - / << _ >> -',
 '//column - / << _ >> -',
 '//context/ Staff/ = - % { _ } -',
 '//context/ Voice/ = - % { _ } -',
-'-//markup - { _ } -',
+'//markup - { _ } -',
 '//notes - { _ } -',
 '//relative - % { _ } -',
 '//score - { //n /? //simultaneous { //n _ //n } /! //n //paper {  } //n /? //midi {  } //n /! } //n -',
